实现cronjob的创建接口以及相应的删除方法
