# pkg/resource/cronjob/cronjob.go
@@ -8,7 +8,9 @@ import (
 	"ufleet-deploy/pkg/cluster"
 	"ufleet-deploy/pkg/log"
 	jk "ufleet-deploy/pkg/resource/job"
+	"ufleet-deploy/pkg/resource/util"
 
+	apierrors "k8s.io/apimachinery/pkg/api/errors"
 	batchv1 "k8s.io/client-go/pkg/apis/batch/v1"
 	batchv2alpha1 "k8s.io/client-go/pkg/apis/batch/v2alpha1"
 )
@@ -29,7 +31,7 @@ var (
 )
 
 type CronJobController interface {
-	Create(group, workspace string, data interface{}, opt CreateOptions) error
+	Create(group, workspace string, data []byte, opt CreateOptions) error
 	Delete(group, workspace, cronjob string, opt DeleteOption) error
 	Get(group, workspace, cronjob string) (CronJobInterface, error)
 	List(group, workspace string) ([]CronJobInterface, error)
@@ -163,11 +165,58 @@ func (p *CronJobManager) ListGroup(groupName string) ([]CronJobInterface, error)
 	return pis, nil
 }
 
-func (p *CronJobManager) Create(groupName, workspaceName string, data interface{}, opt CreateOptions) error {
+func (p *CronJobManager) Create(groupName, workspaceName string, data []byte, opt CreateOptions) error {
 
 	p.locker.Lock()
 	defer p.locker.Unlock()
 
+	ph, err := cluster.NewCronJobHandler(groupName, workspaceName)
+	if err != nil {
+		return log.DebugPrint(err)
+	}
+
+	exts, err := util.ParseJsonOrYaml(data)
+	if err != nil {
+		return log.DebugPrint(err)
+	}
+
+	if len(exts) != 1 {
+		return log.DebugPrint("must offer one  resource json/yaml data")
+	}
+	var cj batchv2alpha1.CronJob
+	err = json.Unmarshal(exts[0].Raw, &cj)
+	if err != nil {
+		return log.DebugPrint(err)
+	}
+
+	if cj.Kind != "CronJob" {
+		return log.DebugPrint("must offer one  cronjob resource json/yaml data")
+	}
+
+	var cp CronJob
+	cp.Name = cj.Name
+	cp.Group = groupName
+	cp.Workspace = workspaceName
+	cp.Template = string(data)
+	cp.User = opt.User
+	if opt.App != nil {
+		cp.AppStack = *opt.App
+	}
+
+	be := backend.NewBackendHandler()
+	err = be.CreateResource(backendKind, groupName, workspaceName, cp.Name, cp)
+	if err != nil {
+		return log.DebugPrint(err)
+	}
+
+	err = ph.Create(workspaceName, &cj)
+	if err != nil {
+		err2 := be.DeleteResource(backendKind, groupName, workspaceName, cp.Name)
+		if err2 != nil {
+			log.ErrorPrint(err2)
+		}
+		return log.DebugPrint(err)
+	}
 	return nil
 
 }
@@ -192,16 +241,17 @@ func (p *CronJobManager) delete(groupName, workspaceName, cronjobName string) er
 func (p *CronJobManager) Delete(group, workspace, cronjobName string, opt DeleteOption) error {
 	p.locker.Lock()
 	defer p.locker.Unlock()
+	ph, err := cluster.NewCronJobHandler(group, workspace)
+	if err != nil {
+		return log.DebugPrint(err)
+	}
+
 	cronjob, err := p.get(group, workspace, cronjobName)
 	if err != nil {
 		return log.DebugPrint(err)
 	}
 
 	if cronjob.memoryOnly {
-		ph, err := cluster.NewCronJobHandler(group, workspace)
-		if err != nil {
-			return log.DebugPrint(err)
-		}
 
 		//触发集群控制器来删除内存中的数据
 		err = ph.Delete(workspace, cronjobName)
@@ -211,7 +261,20 @@ func (p *CronJobManager) Delete(group, workspace, cronjobName string, opt Delete
 		//TODO:ufleet创建的数据
 		return nil
 	} else {
+		be := backend.NewBackendHandler()
+		err := be.DeleteResource(backendKind, group, workspace, cronjobName)
+		if err != nil {
+			return log.DebugPrint(err)
+		}
+
+		err = ph.Delete(workspace, cronjobName)
+		if err != nil {
+			if !apierrors.IsNotFound(err) {
+				return log.DebugPrint(err)
+			}
+		}
 		return nil
+
 	}
 }
 
